# RTP

./: .gitignore  CMakeLists.txt  CMakeListsOld.txt  HDRF.py  README.md  build.sh  csv2edges_NE.py  csv2net_sheep.py  csv2txt  csv2txt.cpp  csv2txt_HDRF.py  distributeData_nodes  distributeData_nodes.cpp  distributeData_relationships  distributeData_relationships.cpp  edges2csv_HDRF_process_V3.py  edges2csv_NE_process_V3.py  edges2csv_sheep_process_V3.py  file_time_0  file_time_1  file_time_2  file_time_3  file_time_4  file_time_5  file_time_6  getConnect.py  graph_v4  graph_v4.cpp  graph_v6.cpp  mpiDBpedia_1-other.cpp  mpiDBpedia_1.cpp  mpiDBpedia_2-other.cpp  mpiDBpedia_3.cpp  mpiDBpedia_4-other.cpp  mpiDBpedia_5-other.cpp  mpiDBpedia_6-other.cpp  mpiDBpedia_6.cpp  mpiDBpedia_7-other.cpp  mpiQueryExecution_complex_1-other.cpp  mpiQueryExecution_complex_1.cpp  (+74 more)
NE/: CMakeLists.txt
VGP/src/application/: Main.java
VGP/src/core/: Edge.java
connect/: gpstore.py  neo4j.py
data/: import.sh
data/headers/dynamic/: Person-neo.csv
old_query/: getConnect.py  getQueryTime.cpp  mpiDBpedia_2.cpp  mpiDBpedia_3-other.cpp  mpiDBpedia_4.cpp  mpiDBpedia_5.cpp  mpiDBpedia_7.cpp  mpiDBpedia_8-other.cpp  mpiDBpedia_8.cpp  mpiER_complex_1.cpp  mpiER_complex_2.cpp  mpiER_complex_3.cpp  mpiQueryExecution_complex_1-SP.cpp  mpiQueryExecution_complex_1-other copy.cpp  mpiQueryExecution_complex_1-random.cpp  mpiQueryExecution_complex_1.cpp  mpiQueryExecution_complex_10-SP.cpp  mpiQueryExecution_complex_10-other copy.cpp  mpiQueryExecution_complex_10-other.cpp  mpiQueryExecution_complex_10-random.cpp  mpiQueryExecution_complex_10.cpp  mpiQueryExecution_complex_11-SP.cpp  mpiQueryExecution_complex_11-other copy.cpp  mpiQueryExecution_complex_11-random.cpp  mpiQueryExecution_complex_11.cpp  mpiQueryExecution_complex_12-SP.cpp  mpiQueryExecution_complex_12-other copy.cpp  mpiQueryExecution_complex_12-other.cpp  mpiQueryExecution_complex_12-random.cpp  mpiQueryExecution_complex_12.cpp  mpiQueryExecution_complex_13-SP.cpp  mpiQueryExecution_complex_13.cpp  mpiQueryExecution_complex_14-SP.cpp  mpiQueryExecution_complex_14-other copy.cpp  mpiQueryExecution_complex_14-other.cpp  mpiQueryExecution_complex_14-random.cpp  mpiQueryExecution_complex_14.cpp  mpiQueryExecution_complex_2-SP.cpp  mpiQueryExecution_complex_2-other copy.cpp  mpiQueryExecution_complex_2-other.cpp  (+80 more)
output/: output_dir.sh
output/new_SF0.1/: connected_label_v4.txt  connected_size_all_v4.txt  done_file_name_v4.txt
output/new_SF0.1/new_output_relationships/: hasInterest.txt  hasModerator.txt  hasType.txt  isPartOf.txt  isSubclassOf.txt  knows.txt  studyAt.txt  workAt.txt
output/new_SF1000/: connected_label_v4.txt  connected_size_all_v4.txt  done_file_name_v4.txt  partition_result_all_6_v2.txt
output/new_SF1000/new_output_relationships/: hasInterest.txt  hasModerator.txt  hasType.txt  isPartOf.txt  isSubclassOf.txt  knows.txt  studyAt.txt  workAt.txt
output/new_SF1000/partition_csv/partition_0/: comment_hasCreator_person_0_0.csv  comment_hasTag_tag_0_0.csv  comment_isLocatedIn_place_0_0.csv  forum_0_0.csv  forum_hasTag_tag_0_0.csv  organisation_0_0.csv  organisation_isLocatedIn_place_0_0.csv  person_0_0.csv  person_hasInterest_tag_0_0.csv  place_0_0.csv  post_hasCreator_person_0_0.csv  post_hasTag_tag_0_0.csv  post_isLocatedIn_place_0_0.csv  tag_0_0.csv
output/new_SF1000/partition_csv/partition_1/: comment_hasCreator_person_0_0.csv  comment_isLocatedIn_place_0_0.csv  comment_replyOf_comment_0_0.csv  comment_replyOf_post_0_0.csv  forum_0_0.csv  forum_containerOf_post_0_0.csv  forum_hasModerator_person_0_0.csv  forum_hasTag_tag_0_0.csv  organisation_0_0.csv  organisation_isLocatedIn_place_0_0.csv  person_0_0.csv  person_isLocatedIn_place_0_0.csv  person_likes_comment_0_0.csv  person_likes_post_0_0.csv  person_studyAt_organisation_0_0.csv  person_workAt_organisation_0_0.csv  place_0_0.csv  place_isPartOf_place_0_0.csv  post_hasCreator_person_0_0.csv  post_hasTag_tag_0_0.csv  post_isLocatedIn_place_0_0.csv  tag_0_0.csv  tag_hasType_tagclass_0_0.csv  tagclass_0_0.csv  tagclass_isSubclassOf_tagclass_0_0.csv
output/new_SF1000/partition_csv/partition_2/: comment_hasCreator_person_0_0.csv  comment_hasTag_tag_0_0.csv  comment_isLocatedIn_place_0_0.csv  comment_replyOf_comment_0_0.csv  comment_replyOf_post_0_0.csv  forum_0_0.csv  forum_containerOf_post_0_0.csv  forum_hasModerator_person_0_0.csv  forum_hasTag_tag_0_0.csv  organisation_0_0.csv  organisation_isLocatedIn_place_0_0.csv  person_0_0.csv  person_hasInterest_tag_0_0.csv  person_isLocatedIn_place_0_0.csv  person_studyAt_organisation_0_0.csv  place_0_0.csv  tag_0_0.csv  (+7 more)
queries/: find_person_id.txt  interactive-complex-1-other.txt  interactive-complex-1-plus.txt  interactive-complex-1.txt  interactive-complex-10-other.txt  interactive-complex-10-plus.txt  interactive-complex-10.txt  interactive-complex-11-other.txt  interactive-complex-11-plus.txt  interactive-complex-11.txt  interactive-complex-12-other.txt  interactive-complex-12-plus.txt  interactive-complex-12-plus2.txt  interactive-complex-12.txt  interactive-complex-13-other.txt  interactive-complex-13.txt  interactive-complex-14-other.txt  interactive-complex-14-plus.txt  interactive-complex-14.txt  interactive-complex-2-other.txt  interactive-complex-2-plus.txt  interactive-complex-2.txt  interactive-complex-3-other.txt  interactive-complex-3.txt  interactive-complex-4-other.txt  interactive-complex-4-plus.txt  interactive-complex-4.txt  interactive-complex-5-other.txt  interactive-complex-5-plus.txt  interactive-complex-5.txt  interactive-complex-6-other.txt  interactive-complex-6-plus.txt  interactive-complex-6.txt  interactive-complex-7-other.txt  interactive-complex-7.txt  interactive-complex-8-plus.txt  interactive-complex-8.txt  interactive-complex-9-other.txt  interactive-complex-9-plus.txt  interactive-complex-9.txt  (+17 more)
scrips/: analyze.py  build-ldbc-other.cypher  build-ldbc.cypher  comment-post-edit.py  createNeo4j.sh  draw1.py  neo4j-load.py  nt2csv_v4.py  result.csv
sheep/lib/: sequence.h
sheep/util/: vfennel.cpp
(+194 files in other folders)
